--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ x-airflow-common: &airflow-common
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor # Or LocalExecutor for simpler setup initially
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false' # Disable example DAGs
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
+    #AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     # Point Airflow to the MLflow server within the Docker network
     AIRFLOW__MLFLOW__TRACKING_URI: ${MLFLOW_TRACKING_URI:-http://mlflow-server:5000}
     # Add other Airflow configs via environment variables as needed
@@ -61,7 +62,7 @@ services:
   #     - airflow-redis-volume:/data
 
   mlflow-server:
-    image: ghcr.io/mlflow/mlflow:v2.8.0 # Use a specific MLflow version
+    image: ghcr.io/mlflow/mlflow:v2.13.1 # Use a specific MLflow version
     container_name: stockpred-mlflow-server
     ports:
       - "5001:5000" # Expose MLflow UI on host port 5001 (internal 5000)
