--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ x-airflow-common: &airflow-common
     - .env # Load environment variables from .env file
   environment:
     &airflow-common-env
-    AIRFLOW__CORE__EXECUTOR: CeleryExecutor # Or LocalExecutor for simpler setup initially
+    AIRFLOW__CORE__EXECUTOR: LocalExecutor  # CeleryExecutor Or LocalExecutor for simpler setup initially
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false' # Disable example DAGs
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     #AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
