--- a/requirements.in
+++ b/requirements.in
@@ -42,8 +42,8 @@ apache-airflow-providers-docker
 apache-airflow-providers-openlineage>=1.8.0
 
 ## === Other Neccessary Library ===
-pyyaml # If not already added
 ta>=0.11.0,<0.12.0
+jupyterlab>=4.3.0,<4.5.0
 
 # === Notebook Support ===
 # ipykernel>=6.15.0,<6.27.0
