--- a/requirements.in
+++ b/requirements.in
@@ -1,20 +1,22 @@
 # requirements.in
 # === Core & Data ===
-pandas>=1.5.0,<2.2.0
-numpy>=1.21.0,<1.27.0
-python-dotenv>=1.0.0,<1.1.0
+pandas>=1.5.0,<=2.2.3
+numpy>=1.21.0,<=2.2.4
+python-dotenv>=1.0.0,<=1.1.0
+pyyaml
 
 # === Data Source ===
 yfinance>=0.2.10,<0.3.0
 
 # === ML Models & Utils ===
-scikit-learn>=1.1.0,<1.4.0
+scikit-learn>=1.1.0,<1.6.1
 statsmodels>=0.13.0,<0.15.0
 
 # --- CHOOSE ONE FRAMEWORK ---
-# Option 1: PyTorch (Seems more likely to work with Py3.11/3.12 via pip)
+# Option 1: PyTorch
 # Allow versions 2.2.0 and higher, check PyTorch docs for latest stable recommended range
-torch>=2.2.0,<2.7.0
+torch>=2.4.0,<2.7.0
+optuna
 
 # Option 2: TensorFlow (Comment out if using PyTorch)
 # Try relaxing the constraint significantly or use CPU version.
@@ -25,16 +27,16 @@ torch>=2.2.0,<2.7.0
 # --- END CHOOSE ONE ---
 
 # === MLOps Tools ===
-mlflow>=2.17.0,<2.21.3 # <--- CHANGE HERE: Target latest available stable series
-dvc>=2.50.0,<3.0.0
+mlflow>=2.17.0,<=2.21.3
+dvc>=2.50.0,<3.59.1
 
 # === Visualization ===
-plotly>=5.10.0,<5.20.0
-matplotlib>=3.5.0,<3.9.0
+plotly>=5.17.0,<6.1.0
+matplotlib>=3.6.0,<3.11.0
 seaborn>=0.12.0,<0.14.0
 
 # === API / Dashboard ===
-fastapi[all]>=0.90.0,<0.110.0
+fastapi[all]>=0.90.0,<0.116.0
 
 # === Airflow Specific (Providers - Versions will be resolved) ===
 apache-airflow-providers-postgres
@@ -44,6 +46,7 @@ apache-airflow-providers-openlineage>=1.8.0
 ## === Other Neccessary Library ===
 ta>=0.11.0,<0.12.0
 jupyterlab>=4.3.0,<4.5.0
+multidict>=6.4.0
 
 # === Notebook Support ===
 # ipykernel>=6.15.0,<6.27.0
