--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+# version: "3.9"
 
 x-airflow-common: &airflow-common
   build: .
@@ -86,11 +86,21 @@ services:
       dockerfile: ./Dockerfile.frontend
     container_name: stockpred-frontend
     ports:
-      - "8000:80"
+      - "8000:8000" #"8000:80"
+    command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload 
     volumes:
-      - ./data:/usr/share/nginx/html/data:ro
+    #  - ./data:/usr/share/nginx/html/data:ro
+      - ./data:/opt/airflow/data:ro # Mount the entire data directory from the host read-only
+      - ./src:/opt/airflow/src:ro # Assuming uvicorn runs from /opt/airflow
+      - ./templates:/opt/airflow/templates:ro # Mount templates read-only
+    environment:
+      - PYTHONPATH=/opt/airflow
+    # env_file:
+    #   - .env # If API needs environment variables
     depends_on:
       - airflow-webserver
+    #   - mlflow-server # Optional
+    #   - airflow-scheduler # Optional
 
 volumes:
   airflow-db-volume:
