--- a/requirements.in
+++ b/requirements.in
@@ -4,6 +4,7 @@ pandas>=1.5.0,<=2.2.3
 numpy>=1.21.0,<=2.2.4
 python-dotenv>=1.0.0,<=1.1.0
 pyyaml
+psycopg2-binary
 
 # === Data Source ===
 yfinance>=0.2.10,<0.3.0
