--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,19 +4,18 @@ WORKDIR /app
 # 1) Copy code API
 COPY src/api    ./api
 
-# 2) Copy các template (Jinja2)
+# 2) Copy template (Jinja2)
 COPY templates  ./templates
 COPY ./templates /opt/airflow/templates
 
-# 3) Copy frontend static files vào templates/static
-#    (nếu bạn muốn giữ cấu trúc như code đang mount)
+# 3) Copy frontend static files into templates/static
 COPY frontend   ./templates/static
 
-# Cài FastAPI + Uvicorn + Jinja2
+# Install FastAPI + Uvicorn + Jinja2
 RUN pip install --no-cache-dir fastapi uvicorn jinja2
 
-# Container lắng nghe port 80 (Compose map 8000:80)
+# Container listen at port 80 (Compose map 8000:80)
 EXPOSE 80
 
-# Khởi Uvicorn trỏ vào module api.main
+# Initialize Uvicorn point at module api.main
 CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "80"]
