--- a/config/params.yaml
+++ b/config/params.yaml
@@ -26,7 +26,7 @@ database:
 
 monitoring:
   performance_thresholds:
-    mape_max: 0.10        # Threshold: Max 10% MAPE
+    mape_max: 0.10
     direction_accuracy_min: 0.55 # Threshold: Min 55% directional accuracy
   evaluation_lag_days: 1 # How many days to wait for actuals (e.g., T+1 for stock prices)
 
