--- a/config/params.yaml
+++ b/config/params.yaml
@@ -7,7 +7,7 @@ data_loading:
 feature_engineering:
   correlation_threshold: 0.9
   sequence_length: 30
-  prediction_length: 1 # Currently only supporting 1-day ahead
+  prediction_length: 1
 
 optimization:
   n_trials: 30
@@ -27,8 +27,8 @@ database:
 monitoring:
   performance_thresholds:
     mape_max: 0.10
-    direction_accuracy_min: 0.55 # Threshold: Min 55% directional accuracy
-  evaluation_lag_days: 1 # How many days to wait for actuals (e.g., T+1 for stock prices)
+    direction_accuracy_min: 0.55
+  evaluation_lag_days: 1
 
 airflow_dags:
   daily_operations_dag_id: "daily_stock_operations_prod"
