--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,16 +85,25 @@ services:
       dockerfile: ./Dockerfile.frontend
     container_name: stockpred-frontend
     ports:
-      - "8000:8000" #"8000:80"
-    command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload 
+      - "8000:80" #"8000:80"
+    # deploy:
+    #   resources:
+    #     reservations:
+    #       devices:
+    #         - driver: nvidia
+    #           count: all
+    #           capabilities: [gpu]
+    command: uvicorn src.api.main:app --host 0.0.0.0 --port 80 --reload
     volumes:
     #  - ./data:/usr/share/nginx/html/data:ro
       - ./data:/opt/airflow/data:ro # Mount the entire data directory from the host read-only
       - ./src:/opt/airflow/src:ro # Assuming uvicorn runs from /opt/airflow
+      # - ./src:/app/src:ro  # Adjusted volume path to match WORKDIR /app
       - ./templates:/opt/airflow/templates:ro # Mount templates read-only
       - ./config:/opt/airflow/config:ro  # Mount config directory read-only
     environment:
       - PYTHONPATH=/opt/airflow
+      # - PYTHONPATH=/app
     depends_on:
       - airflow-webserver
 
