--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,12 @@ x-airflow-common: &airflow-common
     mlflow-server:
       condition: service_started
 
+networks:
+  mlops_network:
+    name: mlops_network
+    driver: bridge
+
+
 services:
   postgres:
     image: postgres:13
@@ -40,20 +46,43 @@ services:
       timeout: 5s
       retries: 5
     volumes:
+      - ./init-multiple-db.sh:/docker-entrypoint-initdb.d/init-multiple-db.sh:ro
       - airflow-db-volume:/var/lib/postgresql/data
+    networks:
+      - mlops_network
 
   mlflow-server:
-    image: ghcr.io/mlflow/mlflow:v2.13.1
+    build: 
+     context: .
+     dockerfile: ./Dockerfile.mlflow
     container_name: stockpred-mlflow-server
     ports:
-      - "5001:5000"
+      - "5000:5000" #5001:5000
+    environment:  
+      - POSTGRES_USER=airflow
+      - POSTGRES_PASSWORD=airflow
+      - POSTGRES_DATABASE=mlflow
+      - MLFLOW_TRACKING_URI=postgresql://airflow:airflow@postgres:5432/mlflow
+      - MLFLOW_TRACKING_URI=postgresql://airflow:airflow@postgres/mlflow
+
     command: >
       mlflow server
         --host 0.0.0.0
         --port 5000
-        --backend-store-uri /mlruns
+        --backend-store-uri postgresql://airflow:airflow@postgres/mlflow
+        --default-artifact-root /mlruns
     volumes:
       - airflow-mlflow-volume:/mlruns
+    networks:
+      - mlops_network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:5000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   airflow-webserver:
     <<: *airflow-common
@@ -66,6 +95,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    networks:
+      - mlops_network
 
   airflow-scheduler:
     <<: *airflow-common
@@ -78,6 +109,8 @@ services:
       interval: 60s
       timeout: 30s
       retries: 5
+    networks:
+      - mlops_network
 
   frontend:
     build:
@@ -106,7 +139,10 @@ services:
       # - PYTHONPATH=/app
     depends_on:
       - airflow-webserver
+    networks:
+      - mlops_network
 
 volumes:
   airflow-db-volume:
   airflow-mlflow-volume:
+
