--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,22 +29,64 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
+
       # INSTALL PYTHON DEPENDENCIES
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8 black pytest psycopg2-binary apache-airflow
+          pip install flake8 black isort pytest pytest-cov mypy safety radon psycopg2-binary apache-airflow
       
       # DUMP
       - name: Display Python version
         run: python --version
       
-      # RUN UNIT TESTS
-      - name: Run unit tests
+      # CODE QUALITY - LINTING WITH FLAKE8
+      - name: Lint code with Flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 src/ tests/ airflow/ --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings
+          flake8 src/ tests/ airflow/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      
+      # CODE QUALITY - CHECK FORMATTING WITH BLACK
+      - name: Check code formatting with Black
+        run: |
+          black --check src/ tests/ airflow/
+      
+      # CODE QUALITY - CHECK IMPORT SORTING WITH ISORT  
+      - name: Check import sorting with isort
+        run: |
+          isort --check-only --profile black src/ tests/ airflow/
+      
+      # CODE QUALITY - TYPE CHECKING WITH MYPY
+      - name: Run type checking with MyPy
+        run: |
+          mypy src/ --ignore-missing-imports
+      
+      # CODE QUALITY - SECURITY SCANNING
+      - name: Check for security vulnerabilities
+        run: |
+          safety check
+      
+      # CODE QUALITY - COMPLEXITY AND DUPLICATION
+      - name: Check code complexity and duplication
+        run: |
+          radon cc src/ -a -nc
+          radon mi src/ -s
+      
+      # RUN UNIT TESTS WITH COVERAGE
+      - name: Run unit tests with coverage
         run: |
           export PYTHONPATH=$(pwd):$(pwd)/src:$PYTHONPATH
-          pytest tests/
+          pytest tests/ --cov=src --cov-report=xml --cov-report=term
+      
+      # UPLOAD COVERAGE TO CODECOV
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          fail_ci_if_error: false
 
       # VALIDATE AIRFLOW DAGS
       - name: Validate Airflow DAG definitions
@@ -142,27 +184,3 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/stockpred-frontend:${{ steps.docker_meta_tags.outputs.tag_suffix }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-
-  deploy:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      # Add your deployment steps here
-      - name: Deploy
-        run: echo "Deploying application..."
