--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,19 +45,19 @@ jobs:
       - name: Lint code with Flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 src/ tests/ airflow/ --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 src/ airflow/ --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings
-          flake8 src/ tests/ airflow/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 src/ airflow/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       
       # CODE QUALITY - CHECK FORMATTING WITH BLACK
-      # - name: Check code formatting with Black
-      #   run: |
-      #     black --check src/ tests/ airflow/
+      - name: Check code formatting with Black
+        run: |
+          black --check src/ airflow/
       
       # CODE QUALITY - CHECK IMPORT SORTING WITH ISORT  
       - name: Check import sorting with isort
         run: |
-          isort --check-only --profile black src/ tests/ airflow/
+          isort --check-only --profile black src/ airflow/
       
       # CODE QUALITY - TYPE CHECKING WITH MYPY
       - name: Run type checking with MyPy
